--- a/style.css
+++ b/style.css
@@ -24,7 +24,11 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ MENU ◘◘◘◘◘◘◘◘◘◘◘◘ */
 .menu-bg {
   background: #2c70ff;
+  /* position: fixed; /* Set the navbar to fixed position */
+  /* top: 0; / */* Positio */n the navbar at the top of the page */
+  /* width: 100%; */
 }
+
 
 .menu {
   max-width: 960px;   /* tela desktop */
@@ -69,17 +73,18 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 }
 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Introdução ◘◘◘◘◘◘◘◘◘◘◘◘ */
-
 .introducao{
-  
+  max-width: 960px;
+  margin: 0 auto;
+  display: flex;
 }
 
 .introducao1{
-    font-size: 2em;
-    line-height: 1; /* grudar mais a letra */
-    max-width: 960px;  /* alinhar com menu */
-    margin: 0 auto; /* alinhar com menu */
-    padding: 70px 0px 0px;
+  font-size: 2em;
+  line-height: 1; /* grudar mais a letra */
+  max-width: 960px;  /* alinhar com menu */
+  margin: 0 auto; /* alinhar com menu */
+  padding: 70px 0px 0px;
 }
 
 .introducao2{
@@ -99,13 +104,30 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   margin-top: 20px;
 }
 
+.btn a {
+  background-color: #f8a25c; 
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 25px;
+  margin: 40px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Sobre ◘◘◘◘◘◘◘◘◘◘◘◘ */
 .sobre {
-  display: flex;
+  display: block;
   max-width: 960px;
   flex: 2;
   margin: 0 auto;
   padding: 60px 0;
+  float: right;
 }
 
 .sobre h1 {
@@ -117,55 +139,87 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 }
 
 .sobre-img {
-  height: 250px;
+  display: block;
+  max-width: 100%;
+  vertical-align: middle;
+  width: 600px;
+  float: right;
+  margin: 0 auto;
+  padding: 0px;
+  position: relative;
 }
-
-.btn a {
-  background-color: #f8a25c; 
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 30px;
-  margin: 40px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-
 
 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Tecnologia ◘◘◘◘◘◘◘◘◘◘◘◘ */
 
-.tecnologia {           /* linha de delimitação */
-  border-top: 2px solid #2c70ff;
-  border-bottom: 2px solid #2c70ff;
-  max-width: 960px;
-  margin: 0 auto;    /* centralizar!! */
-  padding: 40px 0;     /* espaçar separação */
-  display: flex;     /* são os filhos da div */
-  flex-wrap: wrap; /* quebrar as imagens */
+.tecintro{
+  
 }
 
-.tecnologia-item ::before {    /* tracinho do subtítulo q vem antes pseudoelement */
+.tecnologia {
+  max-width: 960px;     /* posicionamento da div */
+  margin: 60px auto;  /* ajustar a margem do site */
+  display: flex;
+  flex-wrap: wrap;    /* quebrar responsivo */
+}
+
+.tecnologia-item {
+  flex: 1 1 300px; /* 1/3 do layout; 1 grow 1 shrink 300px basis */
+  margin: 20px 10px;
+  /* height: 300px;    /* forçar altura,mas não é ideal */ */
+}
+
+.tecnologia-item h2 {
+  font-size: 2.25em;      /* texto estilização */
+  color: #a4a4a4;
+  margin-bottom: 20px;
+}
+
+.tecnologia-item h2::before {    /* tracinho do subtítulo q vem antes pseudoelement */
   content: '';             /* se escrever algo irá aparecer,deixar vazio */   
   display: inline-block;       /* mostrar na linha */
   width:8px;
   height: 30px;
   margin-right: 10px;         /* espaçar right */
-}
-.tecnologia-item:nth-of-type(1) h2::before{   /* classe nth-of-type é pseudoseletor */
-  background: #ae81ff                        /*  nth-of-type(3) só iria falar com o 3°*/
+  background: blue;
 }
 
+.tecnologia-item:nth-of-type(3n+1) h2::before{   /* classe nth-of-type é pseudoseletor */
+  background: #ae81ff                        /*  nth-of-type(3) só iria falar com o 3°*/
+}
+.tecnologia-item:nth-of-type(3n+2) h2::before{
+  background: #f9265e
+}
+.tecnologia-item:nth-of-type(3n+3) h2::before{
+  background: #66d9eb
+}
+
+.tecnologia-item p {
+  font-size: 1.125em;
+  line-height: 1.4;
+  color: #7c7c7c ;
+}
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Portfólio ◘◘◘◘◘◘◘◘◘◘◘◘ */
 .portfolio{
-  max-width: 960px;   /* tela desktop */
+  max-width: 1000px;   /* tela desktop */
   margin: 0 auto;
   display:flex; 
-  flex-direction:column;
+  flex-direction:
+}
+
+.portfolio-btn{
+  background-color: #f8a25c; 
+  color: #ffffff;
+  border: none;
+  padding: 16px 32px;
+  text-align: center;
+  display: inline-block;
+  font-size: 18px;
+  margin: 40px 2px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+  margin-left: 10px;
+  align-items: center;
 }
 
 .container img {
@@ -175,18 +229,24 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   height: auto;
   display:flex;
   justify-content: space-between;
+  float: right;
 }
 
-
-
-.portfolio-btn{
-
+.text {
+  font-size: 1.4em;
+  color: #7c7c7c;
+  max-width: 960px;  
+  margin: 0 auto;
+  margin-top: 20px;
+}
 }
 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Contato ◘◘◘◘◘◘◘◘◘◘◘◘ */
 .contato{
   max-width: 960px;   /* tela desktop */
   margin: 0 auto;
+  display:flex; 
+  flex-direction:
 }
 
 
@@ -205,4 +265,15 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   text-align: center;
   font-size: 2.00em;
   color: #ffffff;
+}
+
+
+/* Limbo: */
+.line {
+  border-top: 2px solid #2c70ff;
+  max-width: 960px;
+  margin: 0 auto;    /* centralizar!! */
+  padding: 40px 0;     /* espaçar separação */
+  display: block;     /* são os filhos da div */
+  flex-wrap: wrap; /* quebrar as imagens */
 }
