--- a/style.css
+++ b/style.css
@@ -110,7 +110,6 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   color: white;
   padding: 16px 32px;
   text-align: center;
-  text-decoration: none;
   display: inline-block;
   font-size: 25px;
   margin: 40px 2px;
@@ -119,7 +118,10 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   border-radius: 10px;
 }
 
-
+.btn :hover{
+  background-color: #2c70ff;
+}
+ 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Sobre ◘◘◘◘◘◘◘◘◘◘◘◘ */
 .sobre {
   display: block;
@@ -153,7 +155,21 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Tecnologia ◘◘◘◘◘◘◘◘◘◘◘◘ */
 
 .tecintro{
-  
+  font-size: 1.0em;
+  line-height: 1; /* grudar mais a letra */
+  max-width: 960px;  /* alinhar com menu */
+  margin: 0 auto; /* alinhar com menu */
+  padding: 0 auto;
+  text-align: center;
+}
+
+.tecintro:after{  /* tracinho sub */
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #222222;
+  margin:8px auto ;
 }
 
 .tecnologia {
@@ -200,11 +216,30 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   color: #7c7c7c ;
 }
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Portfólio ◘◘◘◘◘◘◘◘◘◘◘◘ */
+
+.portintro{
+  font-size: 1.0em;
+  line-height: 1; /* grudar mais a letra */
+  max-width: 960px;  /* alinhar com menu */
+  margin: 0 auto; /* alinhar com menu */
+  padding: 0 auto;
+  text-align: center;
+}
+
+.portintro:after{  /* tracinho sub */
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #222222;
+  margin:8px auto ;
+}
+
 .portfolio{
   max-width: 1000px;   /* tela desktop */
   margin: 0 auto;
   display:flex; 
-  flex-direction:
+  flex-direction:column;
 }
 
 .portfolio-btn{
@@ -239,18 +274,71 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   margin: 0 auto;
   margin-top: 20px;
 }
-}
+
 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Contato ◘◘◘◘◘◘◘◘◘◘◘◘ */
-.contato{
-  max-width: 960px;   /* tela desktop */
-  margin: 0 auto;
-  display:flex; 
-  flex-direction:
+.contintro{
+  font-size: 1.5em;
+  line-height: 1; /* grudar mais a letra */
+  max-width: 960px;  /* alinhar com menu */
+  margin: 0 auto; /* alinhar com menu */
+  padding: 0 auto;
+  text-align: center;
+  align-items: center;
+  background: #f9265e;
 }
 
+.contintro:after{  /* tracinho sub */
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #222222;
+  margin:8px auto ;
+}
 
+.contato {
+  max-width: 960px;   /* tela desktop */
+  margin: 0 auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  display:flex; 
+  padding: 20px;
+}
 
+.clogo {
+  max-width:50px;
+  max-height:50px;
+  width: auto;
+  height: auto;
+  margin: 0 auto;
+  margin-left: 20px;
+  align-items: center;
+  display: inline-block;
+  flex-wrap: wrap;       /* quebra */
+  justify-content: space-between; /* alinhados na ponta */
+  align-items: center;
+  text-align: center;
+}
+
+.container-img{
+  font-size: 1.5em;
+  max-width: 960px;
+  margin: 0 auto;    /* centralizar!! */
+  padding: 30px 0;     /* espaçar separação */
+  display: block;     /* são os filhos da div */
+  flex-wrap: wrap; /* quebrar as imagens */
+  
+}
+
+.container-img:after{  /* tracinho sub */
+  content: "";
+  display: block;
+  width: 60px;
+  height: 3px;
+  background: #222222;
+  margin:8px auto ;
+}
 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Footer ◘◘◘◘◘◘◘◘◘◘◘◘ */
 .footer {
@@ -273,7 +361,7 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   border-top: 2px solid #2c70ff;
   max-width: 960px;
   margin: 0 auto;    /* centralizar!! */
-  padding: 40px 0;     /* espaçar separação */
+  padding: 30px 0;     /* espaçar separação */
   display: block;     /* são os filhos da div */
   flex-wrap: wrap; /* quebrar as imagens */
 }
