--- a/style.css
+++ b/style.css
@@ -2,9 +2,15 @@ body, h1, h2, p, ul, li, a{
   margin: 0px;
   padding: 0px;
 }
+
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: 'Nunito',Helvetica, Arial,sans-serif;
   color: #222222;
+  scroll-behavior: smooth
 }
 ul {             
   list-style: none;
@@ -23,7 +29,7 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ MENU ◘◘◘◘◘◘◘◘◘◘◘◘ */
 .menu-bg {
-  background: #2c70ff;
+  background: #252525;
   /* position: fixed; /* Set the navbar to fixed position */
   /* top: 0; / */* Positio */n the navbar at the top of the page */
   /* width: 100%; */
@@ -69,7 +75,8 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 }
 
 .menu-nav a:hover{
-  color: #f8a25c;
+  color: #f9265e;
+  text-decoration: underline;
 }
 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Introdução ◘◘◘◘◘◘◘◘◘◘◘◘ */
@@ -89,7 +96,7 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 
 .introducao2{
   font-size: 1.5em;
-  color: #f8a25c;
+  color: #ae81ff;
   line-height: 1; 
   max-width: 960px;  
   margin: 0 auto; 
@@ -97,15 +104,16 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 }
 
 .introducao3{
-  font-size: 1.5em;
-  color: #7c7c7c;
+  font-size: 1.4em;
+  font-style: italic;
+  color: #f9265e;
   max-width: 960px;  
   margin: 0 auto;
   margin-top: 20px;
 }
 
 .btn a {
-  background-color: #f8a25c; 
+  background-color:#ae81ff; 
   border: none;
   color: white;
   padding: 16px 32px;
@@ -119,7 +127,7 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 }
 
 .btn :hover{
-  background-color: #2c70ff;
+  background-color:#f9265e;
 }
  
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Sobre ◘◘◘◘◘◘◘◘◘◘◘◘ */
@@ -177,18 +185,22 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   margin: 60px auto;  /* ajustar a margem do site */
   display: flex;
   flex-wrap: wrap;    /* quebrar responsivo */
+  
 }
 
 .tecnologia-item {
   flex: 1 1 300px; /* 1/3 do layout; 1 grow 1 shrink 300px basis */
   margin: 20px 10px;
-  /* height: 300px;    /* forçar altura,mas não é ideal */ */
+
+  /* height: 300px;    /* forçar altura,mas não é ideal */
 }
 
 .tecnologia-item h2 {
   font-size: 2.25em;      /* texto estilização */
   color: #a4a4a4;
   margin-bottom: 20px;
+  margin-left: 70px;
+
 }
 
 .tecnologia-item h2::before {    /* tracinho do subtítulo q vem antes pseudoelement */
@@ -211,6 +223,7 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 }
 
 .tecnologia-item p {
+  
   font-size: 1.125em;
   line-height: 1.4;
   color: #7c7c7c ;
@@ -236,9 +249,11 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 }
 
 .portfolio{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
   max-width: 960px;   /* tela desktop */
   margin: 0 auto;
-  
 }
 
 .portfolio-btn{
@@ -264,8 +279,6 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 }
 
 .text {
-  display: inline-block;
-  flex-wrap: wrap;
   font-size: 1.4em;
   color: #7c7c7c;
   max-width: 960px;  
@@ -275,6 +288,7 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 
 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Contato ◘◘◘◘◘◘◘◘◘◘◘◘ */
+
 .contintro{
   font-size: 1.5em;
   line-height: 1; /* grudar mais a letra */
@@ -294,10 +308,11 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   background: #222222;
   margin:8px auto ;
 }
-.container-img{
+.containerimg{
   max-width: 960px;
-  align-items: center;
+  margin: 0 auto;
   text-align: center;
+  padding: 20px;
 }
 
 
@@ -305,7 +320,7 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 /*  ◘◘◘◘◘◘◘◘◘◘◘◘ Footer ◘◘◘◘◘◘◘◘◘◘◘◘ */
 .footer {
   display: flex;
-  background: #2c70ff;
+  background: #ae81ff;
   height: 150px;
   align-items: center;
 }
@@ -321,7 +336,7 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
 
 /* Limbo: */
 .line {
-  border-top: 2px solid #2c70ff;
+  border-top: 2px solid #ae81ff;
   max-width: 960px;
   margin: 0 auto;    /* centralizar!! */
   padding: 30px 0;     /* espaçar separação */
@@ -344,7 +359,7 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   text-align: center;
 }
 
-.container-img{
+.XXXcontainer-img{  /* VOLTAR AO TOPO, verificar a frente junto com essa tag de html <div class="back-to-top" href="#"></div> https://pt.stackoverflow.com/questions/161986/como-fazer-um-bot%C3%A3o-voltar-ao-topo-em-uma-p%C3%A1gina*/
   font-size: 1.5em;
   max-width: 960px;
   margin: 0 auto;    /* centralizar!! */
@@ -353,3 +368,25 @@ img {  /* quero que as imagens sejam responsivas, não estora os containers com 
   flex-wrap: wrap; /* quebrar as imagens */
   
 }
+
+.XXXback-to-top {
+  background-color: #38322e;
+  border-radius: 65px;
+  bottom: 14px;
+  box-shadow: 2px 3px 19px -2px rgba(0, 0, 0, .75);
+  color: #d9a000;
+  cursor: pointer;
+  height: 40px;
+  position: fixed;
+  right: 22px;
+  width: 40px;
+  z-index: 3;
+&::after {
+    content: '▲';
+    display: flex;
+    justify-content: center;
+    padding-left: 1px;
+    padding-top: 10px;
+  }
+}
+
